--- a/_posts/2020-03-26-services-1.markdown
+++ b/_posts/2020-03-26-services-1.markdown
@@ -1,6 +1,6 @@
 ---
 layout: default
-img: graph.jpg
+img: construction.jpg
 category: Services
 title: Vigeo Construction<br>& Consulting
 description: |
