final push on post edits

--- a/_posts/2020-03-26-services-2.markdown
+++ b/_posts/2020-03-26-services-2.markdown
@@ -8,4 +8,4 @@ categories: [x, y]
 tags: [x, y]
 published: true
 ---
-  Vigeo Consulting.
+  Vigeo Consulting specializes in answering the complex business and technology problems your organization struggles to solve. Our philosophy: put smart people in a room that care about your people and your business and create a customized solution that fits for your needs.  Visit us <a href="https://vigeoconsult.com">here</a>.
