--- a/_posts/2020-03-26-services-3.markdown
+++ b/_posts/2020-03-26-services-3.markdown
@@ -8,4 +8,4 @@ categories: [x, y]
 tags: [x, y]
 published: true
 ---
-Vigeo Custom.
+Vigeo Custom is the creative product arm of Vigeo; from millwork to custom pieces for commercial and residential spaces, our business looks to capture the most anticipated designs and takes special orders for fulfillment.  Visit us <a href="https://vigeocustom.com">here</a>.
