--- a/_posts/2020-03-26-services-1.markdown
+++ b/_posts/2020-03-26-services-1.markdown
@@ -8,4 +8,4 @@ categories: [x, y]
 tags: [x, y]
 published: true
 ---
-  Vigeo Construction and Consulting...
+  Vigeo Construction and Consulting is the engineering, design, and construction arm of Vigeo.  The business specializes in residential and light commercial construction and remodeling with an emphasis on energy and wellness standards.  Visit us <a href="https://vigeoconstruction.com">here</a>.
