--- a/_posts/2020-03-27-services-4.markdown
+++ b/_posts/2020-03-27-services-4.markdown
@@ -8,4 +8,4 @@ categories: [x, y]
 tags: [x, y]
 published: true
 ---
-Vigeo Ranch.
+Ranching and farming are in our blood.  Hard-work, determination, and integrity guide our business to produce only the highest quality meat for our families and buyers.  Visit us <a href="https://vigeoranch.com">here</a>.
